PLT-4609 - Fixing list modals on mobile (#4536)
* PLT-4609 - Fixing list modals on mobile

* PLT-4609 - Adjust more modal height

--- a/webapp/sass/components/_modal.scss
+++ b/webapp/sass/components/_modal.scss
@@ -125,6 +125,7 @@
         }
 
         .modal-dialog {
+            margin-bottom: 0;
             margin-left: auto;
             margin-right: auto;
             max-width: 95%;
@@ -235,19 +236,6 @@
             left: 0;
             position: absolute;
             top: 0;
-        }
-
-        &.more-channel__modal {
-            .modal-body {
-                overflow-x: hidden;
-                padding: 10px 0 15px;
-            }
-
-            .channel-count {
-                @include opacity(.8);
-                float: right;
-                margin-top: 5px;
-            }
         }
 
         .modal-image {
@@ -449,9 +437,37 @@
                 }
             }
         }
+
+        &.more-channel__modal {
+            .modal-body {
+                overflow-x: hidden;
+                padding: 10px 0 15px;
+            }
+
+            .channel-count {
+                @include opacity(.8);
+                float: right;
+                margin-top: 5px;
+            }
+
+            .more-modal__list {
+                max-height: calc(100vh - 270px);
+            }
+        }
     }
 
     .more-modal {
+        .more-modal__list {
+            height: 100vh;
+            max-height: calc(100vh - 340px);
+        }
+
+        &.more-direct-channels {
+            .more-modal__list {
+                max-height: calc(100vh - 325px);
+            }
+        }
+
         .user-list {
             margin-top: 10px;
             overflow-x: hidden;
